# Rolling-Bonxai

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/jazzy/: devcontainer.json
.devcontainer/linux/: devcontainer.json
.docker/: Dockerfile.rolling_bonxai  Dockerfile.rolling_bonxai_jazzy  devcontainer_on_create.sh  devcontainer_post_start.sh
bonxai_core/: CMakeLists.txt  package.xml
bonxai_map/: CMakeLists.txt  package.xml
bonxai_map/include/bonxai_map/: occupancy_map.hpp
bonxai_map/src/: occupancy_map.cpp
bonxai_map/test/: test_occupancy_map.cpp
bonxai_msgs/: CMakeLists.txt  package.xml
bonxai_msgs/msg/: OccupancyMapStats.msg  VoxelGrid.msg
bonxai_msgs/srv/: GetFreeVoxels.srv  GetOccupiedVoxels.srv
bonxai_ros/: CMakeLists.txt  package.xml
bonxai_ros/include/bonxai_ros/: bonxai_server.hpp
bonxai_ros/launch/: bag_recorder.launch.py  bonxai_mapping.launch.py  zed2i_wrapper.launch.py
bonxai_ros/params/: bonxai_params.yaml  zed2i.yaml
bonxai_ros/rviz/: bonxai.rviz
bonxai_ros/src/: bonxai_server.cpp  main.cpp
configs/: default_params.yaml  rolling_map_params.yaml
docs/: refactor_occupancy.md  v2_feature_1_center_origin_chunks.md  v2_feature_2_hysteresis.md  v2_feature_3_chunk_loading_policy.md  v2_feature_4_async_io_lazy_saves.md  v2_implementation_summary.md
include/bonxai_map/: occupancy_map.hpp
include/rolling_map/: chunk_manager.h  map_manager.h  map_params.h  map_server.h  rolling_map.h  rolling_map_params.h  utils.h
launch/: rolling_map.launch.py
rolling_bonxai/: CMakeLists.txt  package.xml
rolling_bonxai/benchmark/: CMakeLists.txt  README.md  gen_benchmarks.sh
rolling_bonxai/benchmark/results/2026-02-05_01-05-11/: benchmark_raw.txt  results.csv
rolling_bonxai/benchmark/src/: chunk_storage_benchmark.cpp
rolling_bonxai/include/rolling_bonxai/: async_chunk_manager.hpp  chunk_loading_policies.hpp  chunk_loading_policy_interface.hpp  chunk_storage.hpp  common.hpp  coordinate_system.hpp  file_storage_backend.hpp  logger.hpp  rolling_occupancy_map.hpp  task_queue.hpp  transition_manager.hpp
rolling_bonxai/scripts/: parse_results.py
rolling_bonxai/src/: async_chunk_manager.cpp  chunk_loading_policies.cpp  chunk_storage.cpp  common.cpp  coordinate_system.cpp  file_storage_backend.cpp  rolling_occupancy_map.cpp  transition_manager.cpp
rolling_bonxai/test/: test_chunk_loading_policy.cpp  test_chunk_storage.cpp  test_common.cpp  test_coordinate_system.cpp  test_file_storage_backend.cpp  test_transition_manager.cpp
rolling_bonxai_msgs/: CMakeLists.txt  package.xml
rolling_bonxai_msgs/msg/: ChunkStats.msg  QuickOccupancyStats.msg  RollingState.msg
rolling_bonxai_ros/: CMakeLists.txt  package.xml
rolling_bonxai_ros/include/rolling_bonxai_ros/: rolling_bonxai_server.hpp  ros_logger.hpp
rolling_bonxai_ros/launch/: bag_recorder.launch.py  rolling_bonxai_mapping.launch.py
rolling_bonxai_ros/params/: rolling_bonxai_params.yaml
rolling_bonxai_ros/src/: main.cpp  rolling_bonxai_server.cpp
rviz/: viz_map.rviz
src/: chunk_manager.cpp  map_manager.cpp  occupancy_map.cpp  rolling_map.cpp  rolling_map_node.cpp  utils.cpp
